[#46913] Fixup: Don't touch line-height and vertical-align for .material-icons inside .button in general, only inside .button--has-icon.

--- a/src/os2datascanner/projects/static/scss/components/_buttons.scss
+++ b/src/os2datascanner/projects/static/scss/components/_buttons.scss
@@ -13,15 +13,17 @@
   transition-property: background-color;
   border-radius: var(--border-radius-button);
   word-break: normal;
-  > .material-icons {
-    line-height: 1rem;
-    vertical-align: top;
-  }
 
   &:focus:not([disabled]),
   &:hover:not([disabled]) {
     background-color: rgba(0, 0, 0, 0.2);
     text-decoration: none;
+  }
+  &--has-icon {
+    .material-icons {
+      line-height: 1rem;
+      vertical-align: top;
+    }
   }
 
   &--round {
